<resources>
    <string name="app_name">Production</string>
    <string name="spinner_title">Party Name</string>
    <string name="booking">Booking(Optional)</string>
    <string name="remark">Remark(Optional)</string>
    <string name="enterpartyname">Enter SubParty Name</string>
    <string name="color_size">Color Size</string>
    <string name="sign_in">Sign In</string>
    <string name="terms_1"><b>1.</b> ABOVE SAID INFORMATION IS CORRECT IN ALL RESPECT AND WE UNDERTAKE TO INFORM YOU IF ANY CHANGE IN THE ABOVE PARTICULAR REGARDING OUR BUSINESS FROM TIME TO TIME.</string>
    <string name="terms_2"><b>2.</b> AS PER OUR TERM <b> SIGNATURE CHEQUE IN FAVOUR OF VASTRAM RESORCES WITHOUT MENTION DATE.</b></string>
    <string name="terms_3"><b>3.</b> IF THE INPUT TAX CREDIT OF GST IS NOT REALIZED/RECEIVE IN VASTRAM RESORCES GST LEDGER, DUE TO CUSTOMERS FAULT, THAN CUSTOMER SHALL BE LIABLE TO PAY SUCH TAX AMOUNT WITH INTEREST AS WELL AS PENALTY TO VASTRAM RESORCES.</string>
    <string name="terms_4"><b>4.</b> IF PAYMENT RECEIVE AFTER DUE DATE INTEREST WILL BE CHARGED 15% PER ANNUM.</string>
    <string name="terms_5"><b>5.</b><b>WE HAVE NO LIABILITY FOR SHORTAGE OF GOODS IN TRANSPORT. IF VENDOR ACCEPT THAT SHORTAGE IN PACKING TIME THEN YOUR ACCOUNT IS CREDIT FOR CLAIM</b>.</string>
    <string name="terms_6"><b>6.</b> PLEASE PREFER YOUR TRANSPORT FOR YOUR CHOICE.</string>
    <string name="terms_7"><b>7.</b> CONTACT IMMEDIATELY IF YOU HAVE ANY COMPLAIN OR SUGGESTION IN OUR SERVICES.</string>
    <string name="terms_8"><b>8.</b> SUBJECT TO <b>"DELHI JURIDICTION ONLY"</b>.</string>
    <string name="article">Enter Article No</string>
    <string name="alert_title"><b>VASTRAM RESORCES</b></string>
    <string name="online_content">ONLINE AND OFFLINE MARKETPLACE FOR GARMENTS MANUFACTURER AND RETAILER</string>
    <string name="online_content_below">Choose your option from give below option to do a specific task</string>
    <string name="billing">please enter billing</string>
    <string name="enter_case">please enter case</string>
    <string name="enter_box">please enter box</string>
    <string name="enter_amt">please enter amount</string>
    <string name="enter_remark">please enter remark</string>
    <string name="enter_packing">please enter Packing</string>
    <string name="enter_freight">please enter freight</string>
    <string name="enter_tax">please enter tax</string>
    <string name="enter_tt_amt">please enter total amount</string>
    <string name="method">please enter method</string>
    <string name="marka">please enter marka</string>
    <string name="bookingstation">please enter booking station</string>
    <string name="givenby">please enter given by</string>
    <string name="opr">please enter Opr</string>
    <string name="enter_detailed_remark">please enter detailed remark</string>
    <string name="enter_pcs">please enter Pcs</string>
    <string name="delivery_date">please choose Delivery date</string>
    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="branch_title"><b>Branches</b></string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>


</resources>